MYSQLEXCEL-165 - EXPORT DATA - ENUM AND SET DATA TYPE VALIDATION IS INCORRECT
- Fixed code in the StringValueCanBeStoredWithMySqlType and ValidateUserDataType methods to correctly split a list of tokens delimited by single quotes that may contain commas within the element's text. Fixed also code in the ValidateUserDataType method to check single quotes in each element of a SET or ENUM declaration -see the method below-. (source\Classes\DataTypeUtilities.cs)
- Created the CheckForCorrectSingleQuoting methods to detect if each element in a list of strings is correctly wrapped with single quotes and any other single quote within the element's text is escaped properly using a preceding single quote. (source\Classes\MiscUtilities.cs)
- Created the WarningsContainer class to encapsulate the logic to manage warnings related to MySQL tables and columns in the Export and Append Data dialogs. (source\Classes\WarningsContainer.cs, source\MySQL.ForExcel.csproj)
- Changed the way warnings were added and removed since the its former code was hard to understand and to maintain. Added code to the SetMySqlDataType to display a warning indicating if a SET or ENUM declaration has an error in a specific element of it. (source\Classes\MySQLDataColumn.cs, source\Classes\MySQLDataTable.cs, source\Forms\AppendDataForm.cs, )
- Added a new resource string to display the warning for incorrect SET or ENUM declarations. (source\Properties\Resources.Designer.cs, source\Properties\Resources.resx)
- Moved the ColumnWarningsChangedArgs and TableWarningsChangedArgs classes to their own files. (source\Classes\EventArgs\ColumnWarningsChangedArgs.cs, source\Classes\EventArgs\TableWarningsChangedArgs.cs, source\MySQL.ForExcel.csproj)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 1.3.4
+- Added an additional validation for enum and set declarations to the Data Type combo-box in the Export Data dialog's Column Options section. The new validation checks
+  that each enum or set element is wrapped in single quotes and that any other single quote found in the element's text is correctly escaped by using a preceding single
+  quote. If such an incorrect element is found, a proper warning indicating there is an error in that element is shown so it is easier to locate the error.
+  (Bug #18298155 - EXPORT DATA - ENUM AND SET DATA TYPE VALIDATION IS INCORRECT)
 - Fixed the detection of a preliminary cells selection in the active Excel Worksheet before MySQL for Excel is opened, in order to enable the Export Data action in this
   scenario. Fixed the disabling of Import, Edit and Append Data actions when the Tables, Views or Procedures titles in the database objects list is selected, which
   actually clears the current database objects selection. (Bug #18323840 - ACTION LABELS IN DB OBJECT SELECTION PANEL ARE NOT ENABLED/DISABLED PROPERLY)
