MYSQLEXCEL-202 - EXPORT DATA - SET DECLARATION CREATED INCORRECTLY
- Changed code in the SetCollectionDataType to have different methods of assembling a SET and an ENUM declaration, since for the SET elements each Excel cell is supposed to have a set of elements separated by comma, whereas for the ENUM the Ecel cell value is the whole element. Made minor improvements to sort the ENUM or SET elements alphabetically and to check if the first row's element (the column name) is already in the list of elements from the 2nd row onwards. (source\Classes\MySQLDataColumn.cs)
- Moved SplitInSqlStatements and SplitInTokens methods from the MySqlDataUtilities to the MiscUtilities class, since the methods do not have anything to do with MySQL data types. (source\Classes\MiscUtilities.cs, source\Classes\MySQLDataUtilities.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.4
+- Fixed the way a SET declaration is assembled automatically from the column's data during an Export Data operation to split elements by commas within each row's value.
+  (MySQL Bug #75660, Bug #20426374 - EXPORT DATA - SET DECLARATION CREATED INCORRECTLY)
 - Added an additional validation for enum and set declarations to the Data Type combo-box in the Export Data dialog's Column Options section. The new validation checks
   that each enum or set element is wrapped in single quotes and that any other single quote found in the element's text is correctly escaped by using a preceding single
   quote. If such an incorrect element is found, a proper warning indicating there is an error in that element is shown so it is easier to locate the error.
