MYSQLEXCEL-181 - EXPORT DATA - WARNING SHOWS COLUMN NAME AS REPEATED WHEN ITS NOT
- Fixed code in the ExcludeColumn setter to fire an analysis of duplicate names on all columns if the current column is flagged to be excluded. Created the CheckForDuplicatedDisplayName method to check if the DisplayName of the current column is a duplicate of another column's DisplayName. Modified the way warnings about duplicate display names is handled in the SetDisplayName method. (source\Classes\MySQLDataColumn.cs)
- Added the CheckForDuplicatedColumnDisplayNames method to fire the check for duplicate DisplayName in all columns of the MySqlDataTable.  Simplified code in the GetColumnIndex method and added new parameters to leave out of the search excluded columns and a column in the specified index. Fixed code in the UseFirstRowAsHeaders method to load column names from the excel data in a first stage, and then in a second stage fire a duplicate name search on every column, which in turn fixes the problem reported in the bug and a problem where the duplicate warning was not being set an all duplicate columns, just in one of the duplicates. (source\Classes\MySQLDataTable.cs, source\Forms\AppendDataForm.cs)
- Fixed code in the AddPrimaryKeyRadioButton_CheckedChanged event method  to set the first column as selected after the _previewDataTable.UseFirstColumnAsPk value is set, since the calls need to happen in that specific order to avoid an incorrect background coloring on the AutoPK grid column. Fixed code in the ColumnNameTextBox_Validating method to only update the AddPrimaryTextBox value when the column name being modified is the AutoPK one and not when any column's name was changed.  Removed the call to RefreshColumnWarnings in the ExcludeCheckBox_CheckedChanged event method since now the ExcludeColumn setter code is correctly firing an update to warnings via events. Created the SetGridColumnBackgroundColor method to have the code that sets a grid column's background color in a 

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
 1.3.4
+- Fixed the way column name duplicates are analyzed, previously at the time a column name was assigned it was checked against other columns to warn in case another
+  column had the same name, this analysis is fine when the user types in a column name, but not when column names are loaded from Excel data. Now the column names are
+  loaded from Excel data and then all columns are analyzed for duplicates. Now columns flagged as Excluded are correctly taken into account in the duplicates check.
+  Fixed a bug also where the name of an automatically added PK was being changed whenever any column name was changed by the user.
+  (Bug #18270044 - EXPORT DATA - WARNING SHOWS COLUMN NAME AS REPEATED WHEN ITS NOT)
 - Fixed the way a SET declaration is assembled automatically from the column's data during an Export Data operation to split elements by commas within each row's value.
   (MySQL Bug #75660, Bug #20426374 - EXPORT DATA - SET DECLARATION CREATED INCORRECTLY)
 - Added an additional validation for enum and set declarations to the Data Type combo-box in the Export Data dialog's Column Options section. The new validation checks
