MYSQLEXCEL-169 - EXPORT DATA - FALSE WARNING ON UNIQUE INDEX COLUMNS WITHOUT DATA
- Added the GetDuplicateValuesInColumn method to return a Dictionary of duplicate sets of values and their frequency using MySQL rules for duplicates (MySQL allows to have duplicate null values in a column that is set to allow null data, while ADO.NET/SQL Server does not). Added the CheckForDataUniqueness method to call GetDuplicateValuesInColumn and to replace the older way to check for data uniqueness (using the DataColumn.Unique property), this method also updates the column warnings. (source\Classes\MySQLDataColumn.cs)
- Changed the way warnings are displayed for data uniqueness in the column and for incorrect ENUM or SET declarations, to help users pinpoint the errors a "More Information" link is displayed along with those warnings and an InfoDialog can be opened clicking the link to show the ENUM or SET elements causing the error or the duplicate sets of data. (source\Classes\MySQLDataColumn.cs, source\Forms\ExportDataForm.cs, source\Forms\ExportDataForm.Designer.cs, source\Forms\ExportDataForm.resx, source\Properties\Resources.Designer.cs, source\Properties\Resources.resx)
- Updated the MySQL Utility DLL to have the latest changes on the InfoDialog to be able to show it in an expanded state. (source\libraries\MySQL.Utility.dll)

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -209,7 +209,7 @@
     <value>Primary Key column cannot be created because another column has the same name.</value>
   </data>
   <data name="ColumnDataNotUniqueWarning" xml:space="preserve">
-    <value>Data in the current column is not unique.</value>
+    <value>Data in column is not unique.</value>
   </data>
   <data name="ExportColumnsGridToolTipCaption" xml:space="preserve">
     <value>Use &lt;Alt + N&gt; to move to the next column and &lt;Alt + P&gt; to move to the previous one.</value>
@@ -1099,6 +1099,12 @@ Since Excel relationships cannot be created, a single PivotTable for the whole E
     <value>Deleting automatically saved connection information entries with non-existent Excel Workbooks.</value>
   </data>
   <data name="ColumnDataSetOrEnumNotValidWarning" xml:space="preserve">
-    <value>Entered Set or Enum declaration contains an error in element: </value>
+    <value>Entered Set or Enum declaration contains an error. </value>
+  </data>
+  <data name="ColumnDataNotUniqueMoreInfoTitle" xml:space="preserve">
+    <value>The following duplicate groups and number of occurrences were found:</value>
+  </data>
+  <data name="ColumnDataSetOrEnumNotValidMoreInfoTitle" xml:space="preserve">
+    <value>The following element within the Enum or Set declaration is not using single quotes correctly:</value>
   </data>
 </root>
