--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,10 @@
 1.3.4
+- Changed the way data uniqueness within a column is checked during an Export Data operation. Before MySQL for Excel relied in ADO.NET's way to determine if the data
+  in a DataColumn is unique (by creating a Unique constraint in it), which uses SQL Server's rules and regards nulls values as duplicates even when the column is set
+  to allow null data. MySQL allows to have duplicate null values in a column that is set to allow null data. Now MySQL for Excel follows the MySQL rules, so if a column
+  is set to allow null data, those values are not considered in the uniqueness check, otherwise they do. Now if duplicate values are found when flagging a column as
+  Unique, a dialog containing the sets of duplicate values along with the count of those sets can be displayed by clicking the More Information link shown within the
+  column warning. (Bug #18270644 - EXPORT DATA - FALSE WARNING ON UNIQUE INDEX COLUMNS WITHOUT DATA)
 - Fixed the way column name duplicates are analyzed, previously at the time a column name was assigned it was checked against other columns to warn in case another
   column had the same name, this analysis is fine when the user types in a column name, but not when column names are loaded from Excel data. Now the column names are
   loaded from Excel data and then all columns are analyzed for duplicates. Now columns flagged as Excluded are correctly taken into account in the duplicates check.
