--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.4
+- Fixed code used to temporarily store the selected Excel range used for an Export or Append Data operation so that it copies only visible rows (i.e. rows that have
+  not been filtered out by an Excel Auto-Filter). (MySQL Bug #75635, Bug #20433602 - MYSQL FOR EXCEL APPEND FUNCTION DOES NOT SKIP ROWS FILTERED IN EXCEL)
 - Changed the way data uniqueness within a column is checked during an Export Data operation. Before MySQL for Excel relied in ADO.NET's way to determine if the data
   in a DataColumn is unique (by creating a Unique constraint in it), which uses SQL Server's rules and regards nulls values as duplicates even when the column is set
   to allow null data. MySQL allows to have duplicate null values in a column that is set to allow null data. Now MySQL for Excel follows the MySQL rules, so if a column
