MYSQLEXCEL-206 - PIVOT TABLE REFRESH ALL NOT WORKING
- Added the RefreshAllPivotTables method to fire a refresh on all PivotTable objects in the given Excel Worksheet, if an error occurs during the refresh it displays it to the user and asks whether the rest of the PivotTables should be refreshed or to stop. Modified the RefreshAllListObjects method to also displays errors and ask users whether to continue with the refresh or stop. (source\Classes\ExcelUtilities.cs, source\ThisAddIn.cs)
- Removed the condition in the OnCustomRefreshAll method since the cancelDefault set inside the if body was never hit. (source\Controls\MySqlRibbon.cs)
- Added resource strings for the question displayed to users whether to continue refreshing Excel tables or PivotTables if an error was thrown. (source\Properties\Resources.Designer.cs, source\Properties\Resources.resx)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.4
+- Fixed the custom Refresh All functionality overriden by MySQL for Excel to fire a refresh not only to Excel tables (ListObjects) but also to Pivot Tables.
+  (MySQL Bug #75565, Bug #20524883 - PIVOT TABLE REFRESH ALL NOT WORKING)
 - Fixed code used to temporarily store the selected Excel range used for an Export or Append Data operation so that it copies only visible rows (i.e. rows that have
   not been filtered out by an Excel Auto-Filter). (MySQL Bug #75635, Bug #20433602 - MYSQL FOR EXCEL APPEND FUNCTION DOES NOT SKIP ROWS FILTERED IN EXCEL)
 - Changed the way data uniqueness within a column is checked during an Export Data operation. Before MySQL for Excel relied in ADO.NET's way to determine if the data
