--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.4
+- Fixed the code involved in Edit Data oeprations that colors Excel cells based on their modifications, so that pasted values on newly added Excel rows are re-colored
+  properly using the color to denote modified values. (MySQL Bug #74285, Bug #19783737 - EDIT DATA - COPYING & PASTING DATA ON NEWLY ADDED ROW CLEARS STATUS COLOR)
 - Fixed the custom Refresh All functionality overriden by MySQL for Excel to fire a refresh not only to Excel tables (ListObjects) but also to Pivot Tables.
   (MySQL Bug #75565, Bug #20524883 - PIVOT TABLE REFRESH ALL NOT WORKING)
 - Fixed code used to temporarily store the selected Excel range used for an Export or Append Data operation so that it copies only visible rows (i.e. rows that have
