--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.3.4
+- Fixed the import of MySQL data into an Excel range to convert any dates before the Excel minimum date (January 1, 1900) to text so Excel does not throw a COM
+  Exception. Verified that these dates can be changed on Edit Data operations and saved back to MySQL without any errors.
+  (MySQL Bug #75450, Bug #20340588 - "EXCEPTION FROM HRESULT: 0X800A03EC" RELATED TO OLD DATE)
 - Changed the method to display a custom Save As dialog when a Workbook is saved in Excel 2007 to one that supports showing all Excel supported file filters.
   (MySQL Bug #75389, Bug #20296618 - EXCEL SAVE FILE FORMATS GONE AFTER MYSQL-FOR-EXCEL STARTED. ONLY .XLS AVAILABLE)
 - Fixed the code involved in Edit Data oeprations that colors Excel cells based on their modifications, so that pasted values on newly added Excel rows are re-colored
