--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.4
+- Fixed the logic that runs before an Excel workbook is saved to remove the defined Excel names used for localized date formats before running the custom after save
+  logic for Excel 2007. (MySQL Bug #75900, Bug #20540331 - WARNING ABOUT MACRO-FREE WORKBOOKS WHEN CLOSING & SAVING AN EXCEL 2007 WORKBOOK)
 - Fixed the import of MySQL data into an Excel range to convert any dates before the Excel minimum date (January 1, 1900) to text so Excel does not throw a COM
   Exception. Verified that these dates can be changed on Edit Data operations and saved back to MySQL without any errors.
   (MySQL Bug #75450, Bug #20340588 - "EXCEPTION FROM HRESULT: 0X800A03EC" RELATED TO OLD DATE)
