--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.3.5
+- Fixed the data type detection logic for a column's data that was failing when only the first row of data contained data but the rest of the rows were empty.
+  (MySQL Bug #78358, Bug #21799680 - EXPORT DATA - DATA TYPE NOT DETECTED CORRECTLY WHEN ONLY FIRST ROW CONTAINS DATA)
+
 1.3.4
 - Fixed the logic that runs before an Excel workbook is saved to remove the defined Excel names used for localized date formats before running the custom after save
   logic for Excel 2007. (MySQL Bug #75900, Bug #20540331 - WARNING ABOUT MACRO-FREE WORKBOOKS WHEN CLOSING & SAVING AN EXCEL 2007 WORKBOOK)
