--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1116,4 +1116,7 @@ Since Excel relationships cannot be created, a single PivotTable for the whole E
   <data name="StandardPivotTableRefreshError" xml:space="preserve">
     <value>An error ocurred trying to refresh data in Pivot Table {0}.</value>
   </data>
+  <data name="ValueLessThanZeroError" xml:space="preserve">
+    <value>Value must be greater or equal to 0.</value>
+  </data>
 </root>
