MYSQLEXCEL-233 - Append Data - Show column data types on grids to aid mapping process
- Added an option to the Advanced Options dialog for Append Data operations, called "Show column data types above column names", that when checked data type
  information for columns on source and target grids of the Append Data dialog is shown. (source\Forms\AppendAdvancedOptionsDialog.cs, source\Forms\AppendAdvancedOptionsDialog.Designer.cs, source\Forms\AppendAdvancedOptionsDialog.resx, source\Properties\Settings.Designer.cs, source\Properties\Settings.settings, source\app.config)
- Replaced the control of the source data grid to use the MultiHeaderDataGridView class so that data type information for source columns can be displayed above column names. (source\Forms\AppendDataForm.Designer.cs, source\Forms\AppendDataForm.cs)
- Changed code in the AdvancedOptionsButton_Click method to perform just the necessary refresh operations depending on the advanced options changed by the user. Added the SetupAdditionalHeaderRows, RefreshColumnHeaderDataTypeToolTips and RefreshAdditionalColumnHeaderRows to respond to changes to the new option added on this commit. (source\Forms\AppendDataForm.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.3.5
+- Added an option to the Advanced Options dialog for Append Data operations, called "Show column data types above column names", that when checked data type
+  information for columns on source and target grids of the Append Data dialog is shown. Showing the data types can sometimes aid users when doing manual
+  mapping of columns.
 - Fixed the data type detection logic for a column's data that was failing when only the first row of data contained data but the rest of the rows were empty.
   (MySQL Bug #78358, Bug #21799680 - EXPORT DATA - DATA TYPE NOT DETECTED CORRECTLY WHEN ONLY FIRST ROW CONTAINS DATA)
 
