MYSQLEXCEL-161 - APPEND DATA HAS BAD COLUMN SIZING WITH VERY SMALL TARGET COLUMN NAMES
- Renamed the MultiHeaderColumn class to MultiHeaderCell. Added the HeaderCellColumnSpanChanged and HeaderCellTextChanged events to it to notify the text or column span values changed. Added the CellSize property computed by the new CalculateCellSize method, to contain the width and height of the header cell based on its contents and cell padding. (source\Classes\MultiHeaderCell.cs, source\Classes\MultiHeaderRow.cs)
- Created event argument classes to handle the new HeaderCellColumnSpanChanged and HeaderCellTextChanged events. (source\Classes\EventArguments\HeaderCellColumnSpanChangedArgs.cs, source\Classes\EventArguments\HeaderCellTextChangedArgs.cs, source\MySQL.ForExcel.csproj)
- Modified the Height property to calculate its value based on contained header cells, also its value is invalidated by setting its related _height field to 0 when a change on header cell contents is detected. Added the NewHeaderCell cell method which must be used to create a new MultiHeaderCell object. (source\Classes\MultiHeaderRow.cs)
- Added code to some property setters and methods to invalidate the headers region or the whole grid when value changes, or to recalculate headers height or width, that way the control will be drawn automatically and not depend on calls to Refresh. Created the AdjustColumnsWidth method to check if the current column width is good considering additional headers, if not it readjusts spanning columns. Created the AdditionalHeaderCellTextOrSpanChanged method which is called whenever a text or span in an additional header cell changes, and calls AdjustColumnsWidth. Refactored code in the OnPaint method to avoid calculating header sizes on every paint, since paints happen VERY frequently; instead the calculation of header sizes is now done on specific events like header cell contents changing, header rows addition or deletion, and such. (source\Controls\MultiHeaderDataGridView

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@
 - Added an option to the Advanced Options dialog for Append Data operations, called "Show column data types above column names", that when checked data type
   information for columns on source and target grids of the Append Data dialog is shown. Showing the data types can sometimes aid users when doing manual
   mapping of columns.
+- Enhanced the custom grid view control used in the Append Data dialog to automatically adjust the width of the grid columns considering not only the grid's cell
+  contents and the base column header texts, but also the contents of the additional header rows.
+  (Bug #16237502 - APPEND DATA HAS BAD COLUMN SIZING WITH VERY SMALL TARGET COLUMN NAMES)
 - Fixed the data type detection logic for a column's data that was failing when only the first row of data contained data but the rest of the rows were empty.
   (MySQL Bug #78358, Bug #21799680 - EXPORT DATA - DATA TYPE NOT DETECTED CORRECTLY WHEN ONLY FIRST ROW CONTAINS DATA)
 
