MYSQLEXCEL-222 - WRONG AUTOMATIC COLUMN MAPPING WHEN FIRST ROW CONTAINS COLUMN NAMES
- Added code to the AppendData method to validate that if a single row of Excel data is selected and then on the Append Data dialog "First Row Contains Column Names" is checked, a warning is displayed stating no rows are available to complete the append operation. Fixed code in the ApplySingleMapping method to correctly map source columns without a name. Added code to the FirstRowHeadersCheckBox_CheckedChanged method to refresh the column headers of the source grid since changing the MySqlDataTable.FirstRowContainsColumnNames property may change the data types of its columns. Moved the RefreshAdditionalColumnHeaderRows call from RefreshAdditionalColumnHeaderRows to FirstRowHeadersCheckBox_CheckedChanged. Fixed in the SetupAdditionalHeaderRows method the order in which the header texts and their fonts are set, since first the font needs to be set before the text so the text size is calculated correctly with the proper font style. Made a cosmetic fix to the way a stored mapping name is generated in the StoreCurrentColumnMapping method. (source\Forms\AppendDataForm.cs, source\Properties\Resources.Designer.cs, source\Properties\Resources.resx)
- Created the BeautifyMySqlDataType method to return a MySQL data type in camel case, as displayed to users in MySQL for Excel. Created overload for the GetStrippedMySqlDataType method to simplify its operation depending on what extra information is needed from the full data type besides returning its counterpart stripped from the extra info. (source\Classes\DataTypeUtilities.cs)
- Modified the GetColumnsInformationTable method to add an option to beautify the data types extracted from a MySQL table stored in the server, so these are displayed in MySQL for Excel consistently. (source\Classes\MySQLDataUtilities.cs)
- Modified the CreateTableSchema method to add an option to beautify the data types extracted from a MySQL table stored in the server, 

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@
 - Added an option to the Advanced Options dialog for Append Data operations, called "Show column data types above column names", that when checked data type
   information for columns on source and target grids of the Append Data dialog is shown. Showing the data types can sometimes aid users when doing manual
   mapping of columns.
+- Fixed code in the Append Data dialog that was incorrectly mapping columns when only a single row of Excel data was selected to append. Additionally validated
+  that if a single row of Excel data is selected and then on the Append Data dialog "First Row Contains Column Names" is checked, a warning is displayed stating
+  no rows are available to complete the append operation. (MySQL Bug #76517, Bug #21799500 - WRONG AUTOMATIC COLUMN MAPPING WHEN FIRST ROW CONTAINS COLUMN NAMES)
 - Enhanced the custom grid view control used in the Append Data dialog to automatically adjust the width of the grid columns considering not only the grid's cell
   contents and the base column header texts, but also the contents of the additional header rows.
   (Bug #16237502 - APPEND DATA HAS BAD COLUMN SIZING WITH VERY SMALL TARGET COLUMN NAMES)
