--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,8 @@
 - Added an option to the Advanced Options dialog for Append Data operations, called "Show column data types above column names", that when checked data type
   information for columns on source and target grids of the Append Data dialog is shown. Showing the data types can sometimes aid users when doing manual
   mapping of columns.
+- Fixed code that checks if data can be stored in a single column of a table with the current column's data type, so warnings about incompatible data type for a
+  column's data can be shown. (MySQL Bug# 78550, Bug #21898699 - APPEND DATA - WARNINGS ABOUT INCOMPATIBLE DATA TYPES DO NOT APPEAR ANYMORE)
 - Fixed code in the Append Data dialog that was incorrectly mapping columns when only a single row of Excel data was selected to append. Additionally validated
   that if a single row of Excel data is selected and then on the Append Data dialog "First Row Contains Column Names" is checked, a warning is displayed stating
   no rows are available to complete the append operation. (MySQL Bug #76517, Bug #21799500 - WRONG AUTOMATIC COLUMN MAPPING WHEN FIRST ROW CONTAINS COLUMN NAMES)
