MYSQLEXCEL-230 - APPEND DATA - INCOMPATIBLE DATA TYPES WARNINGS NOT LINKED CORRECTLY
- Changed code in the ApplySingleMapping, CheckSourceDataAgainstMappedTargetColumn, ClearMappings and SetGridColumnWarningVisibility so that data type warnings are linked to the target columns instead of the source ones. Renamed the ClearSourceColumnVisualWarnings to ClearTargetColumnVisualWarnings and changed its code so that warnings are cleared on the target grid and target columns instead of source ones. Removed the SelectionChanged event delegate for the source grid and added one for the target grid so that warnings are refreshed when the column selected in the target grid changes. (source\Forms\AppendDataForm.cs, source\Forms\AppendDataForm.Designer.cs)
- Changed code in the CanDataBeStoredInGivenColumn method so warnings are updated, and events related to warnings fired, for the target column and not the source one. (source\Classes\MySQLDataColumn.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@
 - Added an option to the Advanced Options dialog for Append Data operations, called "Show column data types above column names", that when checked data type
   information for columns on source and target grids of the Append Data dialog is shown. Showing the data types can sometimes aid users when doing manual
   mapping of columns.
+- Changed the way data type related warnings are linked to grid columns in the Append Data dialog. Now the warnings are linked to the target (lower) grid view
+  columns, which makes perfect sense since a single source column can be mapped to multiple target columns and the warnings are about source data not being suitable
+  for the target column's data type. (MySQL Bug# 78549, Bug #21898678 - APPEND DATA - INCOMPATIBLE DATA TYPES WARNINGS NOT LINKED CORRECTLY)
 - Fixed code that checks if data can be stored in a single column of a table with the current column's data type, so warnings about incompatible data type for a
   column's data can be shown. (MySQL Bug# 78550, Bug #21898699 - APPEND DATA - WARNINGS ABOUT INCOMPATIBLE DATA TYPES DO NOT APPEAR ANYMORE)
 - Fixed code in the Append Data dialog that was incorrectly mapping columns when only a single row of Excel data was selected to append. Additionally validated
