MYSQLEXCEL-228 - APPEND DATA - PROBLEMS WHEN SCROLLING TARGET TABLE GRID
- Created the MultiHeaderCellSpanningInfo class to contain information about spanning header cells needed to correctly clip drawable areas and draw additional header cells. (source\Classes\MultiHeaderCellSpanningInfo.cs, source\MySQL.ForExcel.csproj)
- Moved the logic of the GetHeaderCellSpanningColumnWidths method to the new MultiHeaderCellSpanningInfo class, and extended the logic to compute not only spanning widths, but also visible and overflowing regions. Added code to the OnCellValueChanged method to fix a problem where column widths were not being automatically calculated when adding data to the grid. Adjusted code in the OnPaint method to make use of the information provided by the MultiHeaderCellSpanningInfo and draw correctly spanning header cells. Adjusted code in the AdjustColumnsWidth to make use of the new MultiHeaderCellSpanningInfo class. (source\Controls\MultiHeaderDataGridView.cs)
- Updated the add-in's DLL in the test project to visually perform tests and make sure all scenarios for the MultiHeaderDataGridView are working correctly. (VisualControlsTests\lib\MySQL.ForExcel.dll)

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,8 @@
 - Added an option to the Advanced Options dialog for Append Data operations, called "Show column data types above column names", that when checked data type
   information for columns on source and target grids of the Append Data dialog is shown. Showing the data types can sometimes aid users when doing manual
   mapping of columns.
+- Rewrote the logic that calculates areas for spanning columns to clip and paint visible areas of additional headers correctly.
+  (MySQL Bug #78548, Bug #21898210 - APPEND DATA - PROBLEMS WHEN SCROLLING TARGET TABLE GRID)
 - Added a new advanced option for Append Data operations called "Confirm column mapping overwriting", that if checked every time a source column is dragged and
   dropped over a target column that was already mapped before (i.e. it already contains a mapped source column), a confirmation dialog asking if the overwriting
   should take place is displayed. By default the option is unchecked so that the confirmation is not appearing every time mappings are overwritten during a manual
