MYSQLEXCEL-215 - CAN NOT REFRESH QUERIES
- Extended validation in GetImportConnectionInfo so that if the comment of a list object does not look like a GUID return right away. Added code to the RefreshMySqlData and RefreshAllListObjects to display a friendly message to users in case the connection information of a ListObject created in MySQL for Excel is not found, and report correctly to the consumers of RefreshMySqlData that a refresh of a standard ListObject must not be done. (source\Classes\ExcelUtilities.cs)
- Created the IsGuid extension method to check if a string is a GUID in string representation. (source\Classes\MiscUtilities.cs)
- Added resource strings for the friendly message to users. (source\Properties\Resources.Designer.cs, source\Properties\Resources.resx)
- Corrected a misleading header comment in the RefreshDataCustomFunctionality method. (source\ThisAddIn.cs)

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1130,4 +1130,9 @@ This is most likely caused because a single Excel row was selected and then "Fir
   <data name="AppendDataNoDataToAppendTitleWarning" xml:space="preserve">
     <value>No Data to Append</value>
   </data>
+  <data name="StandardListObjectRefreshMoreInfo" xml:space="preserve">
+    <value>This error is most likely happening because data was imported from a MySQL table or view, and when the Excel Workbook was saved MySQL for Excel could not store the connection information necessary to refresh the data of the Excel table (ListObject).
+
+In order to avoid receiving this error message each time the Excel table is refreshed, please delete the Excel table and import the data again before saving the Excel Workbook.</value>
+  </data>
 </root>
