--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,10 @@
 - Added an option to the Advanced Options dialog for Append Data operations, called "Show column data types above column names", that when checked data type
   information for columns on source and target grids of the Append Data dialog is shown. Showing the data types can sometimes aid users when doing manual
   mapping of columns.
+- Added a validation to the cases when the connection information of an Excel table (ListObject) being refreshed is not found, if that ListObject was likely
+  created by MySQL for Excel then a friendly message is displayed stating the reason for this problem and a solution for it. When this happens the ListObject
+  being refreshed has already a broken link to its related information to connect back to the MySQL server and fetch data again, so that ListObject needs to be
+  deleted and re-created. The root cause for this problem is the one reported in MySQL Bug #76475. (MySQL Bug #77016, Bug #21089790 - CAN NOT REFRESH QUERIES) 
 - Rewrote the logic that calculates areas for spanning columns to clip and paint visible areas of additional headers correctly.
   (MySQL Bug #78548, Bug #21898210 - APPEND DATA - PROBLEMS WHEN SCROLLING TARGET TABLE GRID)
 - Added a new advanced option for Append Data operations called "Confirm column mapping overwriting", that if checked every time a source column is dragged and
