MYSQLEXCEL-52 - WARNING ABOUT MACRO-FREE WORKBOOKS WHEN CLOSING & SAVING AN EXCEL WORKBOOK
- Removed all code related to defined Excel names since it is no longer used: AddLocalizedDateFormatStringsAsNames, AddNameWithInternationalFormula, GetPropertyInternational, RemoveLocalizedDateFormatNames, SetPropertyInternational. (source\Classes\ExcelUtilities.cs)
- Removed all code related to defined Excel names since it is no longer used in Application_WorkbookAfterSave, Application_WorkbookBeforeSave and InitializeWorkbook. Fixed an error I noticed in ExcelAddInPaneFirstRun for Excel 2007, where the InitializeWorkbook needs to be called for all Workbooks not just the active one. (source\ThisAddIn.cs)
- Removed code in CreateCopiedTempRange that was making use of the LOCAL_MYSQL_DATE_FORMAT Excel defined name, since it will be no longer present. Removed parameters needed for the removed code as well in CreateCopiedTempRange, CreateAutoPkTempRange and TempRange constructor. Accomodated for changes in TempRange consumers. (source\Classes\TempRange.cs, source\Classes\MySQLDataTable.cs)
- Added GetNullDateValueAsString method in order to do simplify code in its consumer method. (source\Classes\MySQLDataColumn.cs)
- Simplified common code in GetStringValueForColumn and added a missing check when the value is null or DbNull and the target column is a date in order to return a MySQL zero date. (source\Classes\DataTypeUtilities.cs)
- Testing this fix for zero dates, found out the way a final exporting table was not having all the properties from the preview table, so fixed code in ExportData to change the way the preview table's schema and properties are copied to the final table. (source\Forms\ExportDataForm.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@
 - Added an option to the Advanced Options dialog for Append Data operations, called "Show column data types above column names", that when checked data type
   information for columns on source and target grids of the Append Data dialog is shown. Showing the data types can sometimes aid users when doing manual
   mapping of columns.
+- Stopped using some hidden defined names to store formulas to transform date values into a the date format used by MySQL. These defined names were being
+  detected by Excel as macros or user functions that could not be saved in macro-free workbooks, thus generating an annoying warning every time a Workbook was
+  saved, if the add-in was active. (MySQL Bug #7346, Bug #19358961 - WARNING ABOUT MACRO-FREE WORKBOOKS WHEN CLOSING & SAVING AN EXCEL WORKBOOK)
 - Fixed a bug where connection information objects were being cleaned up from memory when an Excel Workbook was being closed, but the cleanup was happening
   before the Workbook was saved causing that no connection information created after the last save was found to write to disk. Now the cleanup happens correctly
   after the Workbook is actually saved. (MySQL Bug #76475, Bug #21172751 - CHANGES IN WORKBOOK NOT SAVED WHEN CLOSING EXCEL WINDOW)
